--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,10 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python manage.py makemigrations
+        python manage.py migrate
+        python manage.py createsuperuser
+        python manage.py runserver
         
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
