--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,3 +33,5 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        tags: krnmalde/test:latest
+
