--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,23 +26,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install Django==2.2.28
         
-    -   name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-    -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-    -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: krnmalde/test:latest
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: krnmalde/test
+        tags: v1, latest
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         
 
