--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,11 +26,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install Django==2.2.28
         
+    -  name: Automatic Tagging of Releases
+       id: increment-git-tag
+       run: |
+         bash ./git_update.sh -v major
+
+        
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: krnmalde/test
-        tags: v1, latest
+        tags: ${{ steps.increment-git-tag.outputs.git-tag }}
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
